<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegisterActivity">



    <EditText
        android:id="@+id/et_first_name"
        style="@style/viewCustom"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="143dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/et_last_name"
        style="@style/viewCustom"
        android:layout_below="@id/et_first_name"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:layout_below="@id/et_last_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/et_password"
        style="@style/viewCustom"
        android:layout_below="@id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btn_register_account"
        style="@style/viewCustom"
        android:layout_below="@id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:background="@drawable/button_bg"
        android:text="@string/create_act"
        android:fontFamily="@font/rambla_bold"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="249dp"
        android:layout_height="35dp"
        android:layout_below="@id/btn_register_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/already_member"
        android:textAllCaps="false"
        android:background="#004B2F2F"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold" />


</RelativeLayout>