<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="168dp"
        android:layout_height="134dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        app:srcCompat="@drawable/mainpic" />

    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="280dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/etEmail"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/et_password"
        style="@style/viewCustom"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_email"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/etPassword"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btn_login"
        style="@style/viewCustom"
        android:layout_below="@id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_bg"
        android:text="@string/login_title"
        android:fontFamily="@font/rambla_bold"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_alignRight="@id/et_password"
        android:layout_marginTop="8dp"
        android:background="#004B2F2F"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:textAllCaps="false"
        android:text="Forgot Password?"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/btn_register_acct"
        style="@style/viewCustom"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:background="#004B2F2F"
        android:clickable="true"
        android:text="Don't have an account? Sign Up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

</RelativeLayout>